@@ -7,6 +7,7 @@
  */
 package org.dspace.app.rest;
 
+import static com.jayway.jsonpath.matchers.JsonPathMatchers.hasNoJsonPath;
 import static java.io.InputStream.nullInputStream;
 import static org.apache.commons.codec.CharEncoding.UTF_8;
 import static org.apache.commons.io.IOUtils.toInputStream;
@@ -60,6 +61,7 @@ import java.util.Locale;
 import java.util.UUID;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import org.apache.commons.lang3.StringUtils;
 import org.dspace.app.rest.matcher.UsageReportMatcher;
 import org.dspace.app.rest.model.UsageReportPointCategoryRest;
 import org.dspace.app.rest.model.UsageReportPointCityRest;
@@ -84,6 +86,7 @@ import org.dspace.builder.SiteBuilder;
 import org.dspace.content.Bitstream;
 import org.dspace.content.Collection;
 import org.dspace.content.Community;
+import org.dspace.content.DSpaceObject;
 import org.dspace.content.Item;
 import org.dspace.content.Site;
 import org.dspace.core.Constants;
@@ -174,11 +177,13 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
         //first publication for person item
         publicationVisited1 = ItemBuilder.createItem(context, collectionVisited)
                                          .withEntityType("Publication")
+                                         .withTitle("publicationVisited1")
                                          .withAuthor(person.getName(), person.getID().toString())
                                          .build();
         //second publication for person item
         publicationVisited2 = ItemBuilder.createItem(context, collectionVisited)
                                          .withEntityType("Publication")
+                                         .withTitle("publicationVisited2")
                                          .withAuthor(person.getName(), person.getID().toString())
                                          .build();
         //bitstream for first publication of person
@@ -361,42 +366,40 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 .contentType(contentType))
                 .andExpect(status().isCreated());
 
-        UsageReportPointDsoTotalVisitsRest expectedPoint = new UsageReportPointDsoTotalVisitsRest();
-        expectedPoint.addValue("views", 1);
-        expectedPoint.setType("community");
-        expectedPoint.setId(communityVisited.getID().toString());
-
         // And request that community's TotalVisits stat report
         getClient(adminToken).perform(
             get("/api/statistics/usagereports/" + communityVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID))
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(communityVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
-                               TOTAL_VISITS_REPORT_ID, Arrays.asList(expectedPoint))))
-                             );
+                       UsageReportMatcher.matchUsageReport(
+                           communityVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                           TOTAL_VISITS_REPORT_ID,
+                           List.of(
+                               getExpectedDsoViews(communityVisited, 1)
+                           )
+                       )
+                   )));
     }
 
     @Test
     public void totalVisitsReport_Community_NotVisited() throws Exception {
         // ** WHEN **
         // Community is never visited
-        UsageReportPointDsoTotalVisitsRest expectedPoint = new UsageReportPointDsoTotalVisitsRest();
-        expectedPoint.addValue("views", 0);
-        expectedPoint.setType("community");
-        expectedPoint.setId(communityNotVisited.getID().toString());
-
         // And request that community's TotalVisits stat report
         getClient(adminToken).perform(
             get("/api/statistics/usagereports/" + communityNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID))
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(communityNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
-                               TOTAL_VISITS_REPORT_ID, Arrays.asList(expectedPoint))))
-                             );
+                       UsageReportMatcher.matchUsageReport(
+                           communityNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                           TOTAL_VISITS_REPORT_ID,
+                           List.of(
+                               getExpectedDsoViews(communityNotVisited, 0)
+                           )
+                       )
+                   )));
     }
 
     @Test
@@ -419,42 +422,40 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 .contentType(contentType))
                 .andExpect(status().isCreated());
 
-        UsageReportPointDsoTotalVisitsRest expectedPoint = new UsageReportPointDsoTotalVisitsRest();
-        expectedPoint.addValue("views", 2);
-        expectedPoint.setType("collection");
-        expectedPoint.setId(collectionVisited.getID().toString());
-
         // And request that collection's TotalVisits stat report
         getClient(adminToken).perform(
             get("/api/statistics/usagereports/" + collectionVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID))
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(collectionVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
-                               TOTAL_VISITS_REPORT_ID, Arrays.asList(expectedPoint))))
-                             );
+                       UsageReportMatcher.matchUsageReport(
+                           collectionVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                           TOTAL_VISITS_REPORT_ID,
+                           List.of(
+                               getExpectedDsoViews(collectionVisited, 2)
+                           )
+                       )
+                   )));
     }
 
     @Test
     public void totalVisitsReport_Collection_NotVisited() throws Exception {
         // ** WHEN **
         // Collection is never visited
-        UsageReportPointDsoTotalVisitsRest expectedPoint = new UsageReportPointDsoTotalVisitsRest();
-        expectedPoint.addValue("views", 0);
-        expectedPoint.setType("collection");
-        expectedPoint.setId(collectionNotVisited.getID().toString());
-
         // And request that collection's TotalVisits stat report
         getClient(adminToken).perform(
             get("/api/statistics/usagereports/" + collectionNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID))
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(collectionNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
-                               TOTAL_VISITS_REPORT_ID, Arrays.asList(expectedPoint))))
-                             );
+                       UsageReportMatcher.matchUsageReport(
+                           collectionNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                           TOTAL_VISITS_REPORT_ID,
+                           List.of(
+                               getExpectedDsoViews(collectionNotVisited, 0)
+                           )
+                       )
+                   )));
     }
 
     @Test
@@ -472,42 +473,42 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 .contentType(contentType))
                 .andExpect(status().isCreated());
 
-        UsageReportPointDsoTotalVisitsRest expectedPoint = new UsageReportPointDsoTotalVisitsRest();
-        expectedPoint.addValue("views", 1);
-        expectedPoint.setType("item");
-        expectedPoint.setId(itemVisited.getID().toString());
-
         // And request that collection's TotalVisits stat report
         getClient(adminToken).perform(
             get("/api/statistics/usagereports/" + itemVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID))
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(itemVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
-                               TOTAL_VISITS_REPORT_ID, Arrays.asList(expectedPoint))))
-                             );
+                       UsageReportMatcher.matchUsageReport(
+                           itemVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                           TOTAL_VISITS_REPORT_ID,
+                           List.of(
+                               getExpectedDsoViews(itemVisited, 1)
+                           )
+                       )
+                   )));
     }
 
     @Test
     public void totalVisitsReport_Item_NotVisited() throws Exception {
         // ** WHEN **
         //Item is never visited
-        UsageReportPointDsoTotalVisitsRest expectedPoint = new UsageReportPointDsoTotalVisitsRest();
-        expectedPoint.addValue("views", 0);
-        expectedPoint.setType("item");
-        expectedPoint.setId(itemNotVisitedWithBitstreams.getID().toString());
+        List<UsageReportPointRest> expectedPoints = List.of(
+            getExpectedDsoViews(itemNotVisitedWithBitstreams, 0)
+        );
 
         // And request that item's TotalVisits stat report
         getClient(adminToken).perform(
             get("/api/statistics/usagereports/" + itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_VISITS_REPORT_ID))
                    // ** THEN **
                    .andExpect(status().isOk())
-                   .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_VISITS_REPORT_ID,
-                               TOTAL_VISITS_REPORT_ID, Arrays.asList(expectedPoint))))
-                             );
+                             .andExpect(jsonPath("$", Matchers.is(
+                                 UsageReportMatcher.matchUsageReport(
+                                     itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                                     TOTAL_VISITS_REPORT_ID,
+                                     expectedPoints
+                                 )
+                             )));
 
         // only admin access visits report
         getClient(loggedInToken).perform(
@@ -525,19 +526,25 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 get("/api/statistics/usagereports/"
                         + itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_VISITS_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(UsageReportMatcher.matchUsageReport(
-                                itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_VISITS_REPORT_ID,
-                                TOTAL_VISITS_REPORT_ID, Arrays.asList(expectedPoint)))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                        TOTAL_VISITS_REPORT_ID,
+                        expectedPoints
+                    )
+                )));
 
-           getClient().perform(
+       getClient().perform(
                 get("/api/statistics/usagereports/"
                         + itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_VISITS_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(UsageReportMatcher.matchUsageReport(
-                                itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_VISITS_REPORT_ID,
-                                TOTAL_VISITS_REPORT_ID, Arrays.asList(expectedPoint)))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                        TOTAL_VISITS_REPORT_ID,
+                        expectedPoints
+                    )
+                )));
     }
 
     @Test
@@ -555,10 +562,9 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 .contentType(contentType))
                 .andExpect(status().isCreated());
 
-        UsageReportPointDsoTotalVisitsRest expectedPoint = new UsageReportPointDsoTotalVisitsRest();
-        expectedPoint.addValue("views", 1);
-        expectedPoint.setType("bitstream");
-        expectedPoint.setId(bitstreamVisited.getID().toString());
+        List<UsageReportPointRest> expectedPoints = List.of(
+            getExpectedDsoViews(bitstreamVisited, 1)
+        );
 
         // And request that bitstream's TotalVisits stat report
         getClient(adminToken).perform(
@@ -566,10 +572,12 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(bitstreamVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
-                               TOTAL_VISITS_REPORT_ID, Arrays.asList(expectedPoint))))
-                             );
+                       UsageReportMatcher.matchUsageReport(
+                           bitstreamVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                           TOTAL_VISITS_REPORT_ID,
+                           expectedPoints
+                       )
+                   )));
 
         // only admin access visits report
         getClient(loggedInToken).perform(
@@ -586,28 +594,34 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
         getClient(loggedInToken).perform(
                 get("/api/statistics/usagereports/" + bitstreamVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(UsageReportMatcher.matchUsageReport(
-                                bitstreamVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID, TOTAL_VISITS_REPORT_ID,
-                                Arrays.asList(expectedPoint)))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        bitstreamVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                        TOTAL_VISITS_REPORT_ID,
+                        expectedPoints
+                    )
+                )));
 
         getClient().perform(
                 get("/api/statistics/usagereports/" + bitstreamVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(UsageReportMatcher.matchUsageReport(
-                                bitstreamVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID, TOTAL_VISITS_REPORT_ID,
-                                Arrays.asList(expectedPoint)))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        bitstreamVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                        TOTAL_VISITS_REPORT_ID,
+                        expectedPoints
+                    )
+                )));
     }
 
     @Test
     public void totalVisitsReport_Bitstream_NotVisited() throws Exception {
         // ** WHEN **
         // Bitstream is never visited
-        UsageReportPointDsoTotalVisitsRest expectedPoint = new UsageReportPointDsoTotalVisitsRest();
-        expectedPoint.addValue("views", 0);
-        expectedPoint.setType("bitstream");
-        expectedPoint.setId(bitstreamNotVisited.getID().toString());
+
+        List<UsageReportPointRest> expectedPoints = List.of(
+            getExpectedDsoViews(bitstreamNotVisited, 0)
+        );
 
         String authToken = getAuthToken(admin.getEmail(), password);
         // And request that bitstream's TotalVisits stat report
@@ -616,10 +630,12 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(bitstreamNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
-                               TOTAL_VISITS_REPORT_ID, Arrays.asList(expectedPoint))))
-                             );
+                       UsageReportMatcher.matchUsageReport(
+                           bitstreamNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                           TOTAL_VISITS_REPORT_ID,
+                           expectedPoints
+                       )
+                   )));
 
         String tokenEPerson = getAuthToken(eperson.getEmail(), password);
         getClient(tokenEPerson).perform(
@@ -636,18 +652,24 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
         getClient(tokenEPerson).perform(
                 get("/api/statistics/usagereports/" + bitstreamNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(UsageReportMatcher.matchUsageReport(
-                                bitstreamNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID, TOTAL_VISITS_REPORT_ID,
-                                Arrays.asList(expectedPoint)))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        bitstreamNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                        TOTAL_VISITS_REPORT_ID,
+                        expectedPoints
+                    )
+                )));
 
       getClient().perform(
                 get("/api/statistics/usagereports/" + bitstreamNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(UsageReportMatcher.matchUsageReport(
-                                bitstreamNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID, TOTAL_VISITS_REPORT_ID,
-                                Arrays.asList(expectedPoint)))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        bitstreamNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                        TOTAL_VISITS_REPORT_ID,
+                        expectedPoints
+                    )
+                )));
     }
 
     @Test
@@ -673,9 +695,12 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(itemVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                               TOTAL_VISITS_PER_MONTH_REPORT_ID, expectedPoints))));
+                       UsageReportMatcher.matchUsageReport(
+                           itemVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                           TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                           expectedPoints
+                       )
+                   )));
 
         // only admin has access
         getClient(loggedInToken).perform(
@@ -692,26 +717,30 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
         getClient(loggedInToken).perform(
                 get("/api/statistics/usagereports/" + itemVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(UsageReportMatcher.matchUsageReport(
-                                itemVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                                TOTAL_VISITS_PER_MONTH_REPORT_ID, expectedPoints))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        itemVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                        TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                        expectedPoints
+                        )
+                )));
 
        getClient().perform(
                 get("/api/statistics/usagereports/" + itemVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(UsageReportMatcher.matchUsageReport(
-                                itemVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                                TOTAL_VISITS_PER_MONTH_REPORT_ID, expectedPoints))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        itemVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                        TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                        expectedPoints
+                    )
+                )));
     }
 
     @Test
     public void totalVisitsPerMonthReport_Item_NotVisited() throws Exception {
         // ** WHEN **
         // Item is not visited
-        List<UsageReportPointRest> expectedPoints = this.getListOfVisitsPerMonthsPoints(0);
-
         // And request that item's TotalVisitsPerMonth stat report
         getClient(adminToken).perform(
             get("/api/statistics/usagereports/" + itemNotVisitedWithBitstreams.getID() + "_" +
@@ -719,10 +748,12 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(
+                       UsageReportMatcher.matchUsageReport(
                                itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                               TOTAL_VISITS_PER_MONTH_REPORT_ID, expectedPoints))));
+                               TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                               this.getListOfVisitsPerMonthsPoints(0)
+                       )
+                   )));
     }
 
     @Test
@@ -745,18 +776,18 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 .contentType(contentType))
                 .andExpect(status().isCreated());
 
-        List<UsageReportPointRest> expectedPoints = this.getListOfVisitsPerMonthsPoints(2);
-
         // And request that collection's TotalVisitsPerMonth stat report
         getClient(adminToken).perform(
             get("/api/statistics/usagereports/" + collectionVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID))
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(
-                               collectionVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                               TOTAL_VISITS_PER_MONTH_REPORT_ID, expectedPoints))));
+                       UsageReportMatcher.matchUsageReport(
+                           collectionVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                           TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                           this.getListOfVisitsPerMonthsPoints(2)
+                       )
+                   )));
     }
 
     @Test
@@ -774,10 +805,9 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 .contentType(contentType))
                 .andExpect(status().isCreated());
 
-        UsageReportPointDsoTotalVisitsRest expectedPoint = new UsageReportPointDsoTotalVisitsRest();
-        expectedPoint.addValue("views", 1);
-        expectedPoint.setType("bitstream");
-        expectedPoint.setId(bitstreamVisited.getID().toString());
+        List<UsageReportPointRest> expectedPoints = List.of(
+            getExpectedDsoViews(bitstreamVisited, 1)
+        );
 
         // And request that bitstreams's TotalDownloads stat report
         getClient(adminToken).perform(
@@ -785,9 +815,12 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(bitstreamVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
-                               TOTAL_DOWNLOADS_REPORT_ID, Arrays.asList(expectedPoint)))));
+                       UsageReportMatcher.matchUsageReport(
+                           bitstreamVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
+                           TOTAL_DOWNLOADS_REPORT_ID,
+                           expectedPoints
+                       )
+                   )));
 
         // only admin has access to downloads report
         getClient(loggedInToken).perform(
@@ -804,18 +837,24 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
         getClient(loggedInToken).perform(
                 get("/api/statistics/usagereports/" + bitstreamVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(UsageReportMatcher.matchUsageReport(
-                                bitstreamVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID, TOTAL_DOWNLOADS_REPORT_ID,
-                                Arrays.asList(expectedPoint)))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        bitstreamVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
+                        TOTAL_DOWNLOADS_REPORT_ID,
+                        expectedPoints
+                    )
+                )));
 
         getClient().perform(
                 get("/api/statistics/usagereports/" + bitstreamVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(UsageReportMatcher.matchUsageReport(
-                                bitstreamVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID, TOTAL_DOWNLOADS_REPORT_ID,
-                                Arrays.asList(expectedPoint)))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        bitstreamVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
+                        TOTAL_DOWNLOADS_REPORT_ID,
+                        expectedPoints
+                    )
+                )));
     }
 
     @Test
@@ -835,7 +874,8 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
 
         UsageReportPointDsoTotalVisitsRest expectedPoint = new UsageReportPointDsoTotalVisitsRest();
         expectedPoint.addValue("views", 1);
-        expectedPoint.setId("BitstreamVisitedName");
+        expectedPoint.setId(bitstreamVisited.getID().toString());
+        expectedPoint.setLabel("BitstreamVisitedName");
         expectedPoint.setType("bitstream");
 
         // And request that item's TotalDownloads stat report
@@ -845,9 +885,14 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
-                               TOTAL_DOWNLOADS_REPORT_ID, Arrays.asList(expectedPoint)))));
+                       UsageReportMatcher.matchUsageReport(
+                           itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
+                           TOTAL_DOWNLOADS_REPORT_ID,
+                           List.of(
+                               getExpectedDsoViews(bitstreamVisited, 1)
+                           )
+                       )
+                   )));
     }
 
     @Test
@@ -861,9 +906,12 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
-                               TOTAL_DOWNLOADS_REPORT_ID, new ArrayList<>()))));
+                       UsageReportMatcher.matchUsageReport(
+                           itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
+                           TOTAL_DOWNLOADS_REPORT_ID,
+                           List.of()
+                       )
+                   )));
     }
 
     @Test
@@ -891,10 +939,10 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 .contentType(contentType))
                 .andExpect(status().isCreated());
 
-        UsageReportPointCountryRest expectedPoint = new UsageReportPointCountryRest();
-        expectedPoint.addValue("views", 1);
-        expectedPoint.setId("US");
-        expectedPoint.setLabel("United States");
+        List<UsageReportPointRest> expectedPoints = List.of(
+                getExpectedCountryViews(Locale.US.getCountry(),
+                Locale.US.getDisplayCountry(context.getCurrentLocale()),
+                1));
 
         // And request that collection's TopCountries report
         getClient(adminToken).perform(
@@ -902,9 +950,12 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(collectionVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
-                               TOP_COUNTRIES_REPORT_ID, Arrays.asList(expectedPoint)))));
+                       UsageReportMatcher.matchUsageReport(
+                           collectionVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
+                           TOP_COUNTRIES_REPORT_ID,
+                           expectedPoints
+                       )
+                   )));
 
         // only admin has access to countries report
         getClient(loggedInToken).perform(
@@ -921,18 +972,24 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
         getClient(loggedInToken).perform(
                 get("/api/statistics/usagereports/" + collectionVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(UsageReportMatcher.matchUsageReport(
-                                collectionVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID, TOP_COUNTRIES_REPORT_ID,
-                                Arrays.asList(expectedPoint)))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        collectionVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
+                        TOP_COUNTRIES_REPORT_ID,
+                        expectedPoints
+                        )
+                )));
 
       getClient().perform(
                 get("/api/statistics/usagereports/" + collectionVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(UsageReportMatcher.matchUsageReport(
-                                collectionVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID, TOP_COUNTRIES_REPORT_ID,
-                                Arrays.asList(expectedPoint)))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        collectionVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
+                        TOP_COUNTRIES_REPORT_ID,
+                        expectedPoints
+                    )
+                )));
     }
 
     /**
@@ -960,8 +1017,7 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
 
         UsageReportPointCountryRest expectedPoint = new UsageReportPointCountryRest();
         expectedPoint.addValue("views", 2);
-        expectedPoint.setId("US");
-        expectedPoint.setLabel("United States");
+        expectedPoint.setIdAndLabel(Locale.US.getCountry(), Locale.US.getDisplayCountry(context.getCurrentLocale()));
 
         // And request that collection's TopCountries report
         getClient(adminToken).perform(
@@ -969,9 +1025,14 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(communityVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
-                               TOP_COUNTRIES_REPORT_ID, Arrays.asList(expectedPoint)))));
+                       UsageReportMatcher.matchUsageReport(
+                           communityVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
+                           TOP_COUNTRIES_REPORT_ID,
+                           List.of(
+                               getExpectedCountryViews("US", "United States", 2)
+                           )
+                       )
+                   )));
     }
 
     /**
@@ -987,9 +1048,12 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(itemNotVisitedWithBitstreams.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
-                               TOP_COUNTRIES_REPORT_ID, new ArrayList<>()))));
+                       UsageReportMatcher.matchUsageReport(
+                           itemNotVisitedWithBitstreams.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
+                           TOP_COUNTRIES_REPORT_ID,
+                           List.of()
+                       )
+                   )));
     }
 
     /**
@@ -1010,9 +1074,9 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 .contentType(contentType))
                 .andExpect(status().isCreated());
 
-        UsageReportPointCityRest expectedPoint = new UsageReportPointCityRest();
-        expectedPoint.addValue("views", 1);
-        expectedPoint.setId("New York");
+        List<UsageReportPointRest> expectedPoints = List.of(
+            getExpectedCityViews("New York", 1)
+        );
 
         // And request that item's TopCities report
         getClient(adminToken).perform(
@@ -1020,9 +1084,12 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(itemVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
-                               TOP_CITIES_REPORT_ID, Arrays.asList(expectedPoint)))));
+                       UsageReportMatcher.matchUsageReport(
+                           itemVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
+                           TOP_CITIES_REPORT_ID,
+                           expectedPoints
+                       )
+                   )));
 
         // only admin has access to cities report
         getClient(loggedInToken).perform(
@@ -1039,18 +1106,24 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
         getClient(loggedInToken).perform(
                 get("/api/statistics/usagereports/" + itemVisited.getID() + "_" + TOP_CITIES_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(
-                                UsageReportMatcher.matchUsageReport(itemVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
-                                        TOP_CITIES_REPORT_ID, Arrays.asList(expectedPoint)))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        itemVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
+                        TOP_CITIES_REPORT_ID,
+                        expectedPoints
+                    )
+                )));
 
         getClient().perform(
                 get("/api/statistics/usagereports/" + itemVisited.getID() + "_" + TOP_CITIES_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(
-                                UsageReportMatcher.matchUsageReport(itemVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
-                                        TOP_CITIES_REPORT_ID, Arrays.asList(expectedPoint)))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        itemVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
+                        TOP_CITIES_REPORT_ID,
+                        expectedPoints
+                    )
+                )));
     }
 
     /**
@@ -1081,19 +1154,20 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 .contentType(contentType))
                 .andExpect(status().isCreated());
 
-        UsageReportPointCityRest expectedPoint = new UsageReportPointCityRest();
-        expectedPoint.addValue("views", 3);
-        expectedPoint.setId("New York");
-
         // And request that community's TopCities report
         getClient(adminToken).perform(
             get("/api/statistics/usagereports/" + communityVisited.getID() + "_" + TOP_CITIES_REPORT_ID))
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(communityVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
-                               TOP_CITIES_REPORT_ID, Arrays.asList(expectedPoint)))));
+                       UsageReportMatcher.matchUsageReport(
+                           communityVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
+                           TOP_CITIES_REPORT_ID,
+                           List.of(
+                               getExpectedCityViews("New York", 3)
+                           )
+                       )
+                   )));
     }
 
     /**
@@ -1109,9 +1183,12 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(collectionNotVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
-                               TOP_CITIES_REPORT_ID, new ArrayList<>()))));
+                       UsageReportMatcher.matchUsageReport(
+                           collectionNotVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
+                           TOP_CITIES_REPORT_ID,
+                           List.of()
+                       )
+                   )));
     }
 
     @Test
@@ -1142,7 +1219,8 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
         getClient().perform(get("/api/statistics/usagereports/search/object?uri=http://localhost:8080/server/api/core" +
                 "/items/" + itemNotVisitedWithBitstreams.getID()))
                 // ** THEN **
-                .andExpect(status().isUnauthorized());
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$", hasNoJsonPath("$.points")));
         // We request a dso's TotalVisits usage stat report as admin
         getClient(adminToken)
                 .perform(get("/api/statistics/usagereports/search/object?uri=http://localhost:8080/server/api" +
@@ -1160,7 +1238,8 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
             .perform(get("/api/statistics/usagereports/search/object?uri=http://localhost:8080/server/api/core" +
                          "/items/" + itemNotVisitedWithBitstreams.getID()))
             // ** THEN **
-            .andExpect(status().isUnauthorized());
+            .andExpect(status().isOk())
+            .andExpect(jsonPath("$", hasNoJsonPath("$.points")));
     }
 
     @Test
@@ -1184,20 +1263,23 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 .perform(get("/api/statistics/usagereports/search/object?uri=http://localhost:8080/server/api/core" +
                         "/items/" + itemNotVisitedWithBitstreams.getID()))
                 // ** THEN **
-                .andExpect(status().isUnauthorized());
+            .andExpect(status().isOk())
+            .andExpect(jsonPath("$", hasNoJsonPath("$.points")));
         // We request a dso's TotalVisits usage stat report as logged in eperson and has read policy for this user
         getClient(loggedInToken)
             .perform(get("/api/statistics/usagereports/search/object?uri=http://localhost:8080/server/api/core" +
                          "/items/" + itemNotVisitedWithBitstreams.getID()))
             // ** THEN **
-            .andExpect(status().isForbidden());
+            .andExpect(status().isOk())
+            .andExpect(jsonPath("$", hasNoJsonPath("$.points")));
         // We request a dso's TotalVisits usage stat report as another logged in eperson and has no read policy for
         // this user
         getClient(anotherLoggedInUserToken)
                 .perform(get("/api/statistics/usagereports/search/object?uri=http://localhost:8080/server/api/core" +
                         "/items/" + itemNotVisitedWithBitstreams.getID()))
                 // ** THEN **
-                .andExpect(status().isForbidden());
+            .andExpect(status().isOk())
+            .andExpect(jsonPath("$", hasNoJsonPath("$.points")));
     }
 
     @Test
@@ -1269,21 +1351,25 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
         UsageReportPointDsoTotalVisitsRest expectedPoint1 = new UsageReportPointDsoTotalVisitsRest();
         expectedPoint1.addValue("views", 1);
         expectedPoint1.setType("item");
+        expectedPoint1.setLabel("My item");
         expectedPoint1.setId(item.getID().toString());
 
         UsageReportPointDsoTotalVisitsRest expectedPoint2 = new UsageReportPointDsoTotalVisitsRest();
         expectedPoint2.addValue("views", 2);
         expectedPoint2.setType("item");
+        expectedPoint2.setLabel("My item 2");
         expectedPoint2.setId(item2.getID().toString());
 
         UsageReportPointDsoTotalVisitsRest expectedPoint3 = new UsageReportPointDsoTotalVisitsRest();
         expectedPoint3.addValue("views", 1);
         expectedPoint3.setType("item");
+        expectedPoint3.setLabel("My item 3");
         expectedPoint3.setId(item3.getID().toString());
 
         UsageReportPointDsoTotalVisitsRest expectedPoint4 = new UsageReportPointDsoTotalVisitsRest();
         expectedPoint4.addValue("views", 1);
         expectedPoint4.setType("item");
+        expectedPoint4.setLabel("My item 4");
         expectedPoint4.setId(item4.getID().toString());
 
         List<UsageReportPointRest> points = List.of(expectedPoint1, expectedPoint2, expectedPoint3, expectedPoint4);
@@ -1298,8 +1384,7 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
 
         UsageReportPointCountryRest pointCountry = new UsageReportPointCountryRest();
         pointCountry.addValue("views", 5);
-        pointCountry.setId("US");
-        pointCountry.setLabel("United States");
+        pointCountry.setIdAndLabel(Locale.US.getCountry(), Locale.US.getDisplayCountry(context.getCurrentLocale()));
 
         UsageReportPointCategoryRest articleCategory = new UsageReportPointCategoryRest();
         articleCategory.addValue("views", 1);
@@ -1400,16 +1485,19 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
         UsageReportPointDsoTotalVisitsRest expectedPoint1 = new UsageReportPointDsoTotalVisitsRest();
         expectedPoint1.addValue("views", 3);
         expectedPoint1.setType("item");
+        expectedPoint1.setLabel("Item 1");
         expectedPoint1.setId(item1.getID().toString());
 
         UsageReportPointDsoTotalVisitsRest expectedPoint2 = new UsageReportPointDsoTotalVisitsRest();
         expectedPoint2.addValue("views", 3);
         expectedPoint2.setType("item");
+        expectedPoint2.setLabel("Item 2");
         expectedPoint2.setId(item2.getID().toString());
 
         UsageReportPointDsoTotalVisitsRest expectedPoint3 = new UsageReportPointDsoTotalVisitsRest();
         expectedPoint3.addValue("views", 2);
         expectedPoint3.setType("item");
+        expectedPoint3.setLabel("Item 3");
         expectedPoint3.setId(item3.getID().toString());
 
         List<UsageReportPointRest> points = List.of(expectedPoint1, expectedPoint2, expectedPoint3);
@@ -1424,8 +1512,7 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
 
         UsageReportPointCountryRest pointCountry = new UsageReportPointCountryRest();
         pointCountry.addValue("views", 8);
-        pointCountry.setId("US");
-        pointCountry.setLabel("United States");
+        pointCountry.setIdAndLabel(Locale.US.getCountry(), Locale.US.getDisplayCountry(context.getCurrentLocale()));
 
         getClient(adminToken)
             .perform(get("/api/statistics/usagereports/search/object")
@@ -1477,8 +1564,8 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
 
         UsageReportPointCountryRest expectedPointCountry = new UsageReportPointCountryRest();
         expectedPointCountry.addValue("views", 1);
-        expectedPointCountry.setId("US");
-        expectedPointCountry.setLabel("United States");
+        expectedPointCountry.setIdAndLabel(Locale.US.getCountry(),
+                Locale.US.getDisplayCountry(context.getCurrentLocale()));
 
         // And request the community usage reports
         getClient(adminToken)
@@ -1488,48 +1575,70 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
             .andExpect(status().isOk())
             .andExpect(jsonPath("$._embedded.usagereports", not(empty())))
             .andExpect(jsonPath("$._embedded.usagereports", Matchers.containsInAnyOrder(
-                UsageReportMatcher
-                    .matchUsageReport(communityVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID, TOTAL_VISITS_REPORT_ID,
-                        Arrays.asList(expectedPointTotalVisits)),
-                UsageReportMatcher.matchUsageReport(communityVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                UsageReportMatcher.matchUsageReport(
+                    communityVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                    TOTAL_VISITS_REPORT_ID,
+                    List.of(
+                        getExpectedDsoViews(communityVisited, 1)
+                    )
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    communityVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
                     TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                    this.getListOfVisitsPerMonthsPoints(1)),
-                UsageReportMatcher.matchUsageReport(communityVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
-                    TOP_CITIES_REPORT_ID, Arrays.asList(expectedPointCity)),
-                UsageReportMatcher.matchUsageReport(communityVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
-                    TOP_COUNTRIES_REPORT_ID, Arrays.asList(expectedPointCountry))
-                                                                                       )));
+                    this.getListOfVisitsPerMonthsPoints(1)
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    communityVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
+                    TOP_CITIES_REPORT_ID,
+                    List.of(
+                        getExpectedCityViews("New York", 1)
+                    )
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    communityVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
+                    TOP_COUNTRIES_REPORT_ID,
+                    List.of(
+                        getExpectedCountryViews("US", "United States", 1)
+                    )
+                )
+            )));
     }
 
     @Test
     public void usageReportsSearch_Collection_NotVisited() throws Exception {
         // ** WHEN **
         // Collection is not visited
-        UsageReportPointDsoTotalVisitsRest expectedPointTotalVisits = new UsageReportPointDsoTotalVisitsRest();
-        expectedPointTotalVisits.addValue("views", 0);
-        expectedPointTotalVisits.setType("collection");
-        expectedPointTotalVisits.setId(collectionNotVisited.getID().toString());
         // And request the collection's usage reports
         getClient(adminToken)
-                .perform(get("/api/statistics/usagereports/search/object?uri=http://localhost:8080/server/api/core" +
-                        "/collections/" + collectionNotVisited.getID()))
-                // ** THEN **
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$._embedded.usagereports", not(empty())))
-                .andExpect(jsonPath("$._embedded.usagereports", Matchers.containsInAnyOrder(
-                        UsageReportMatcher
-                                .matchUsageReport(collectionNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
-                                        TOTAL_VISITS_REPORT_ID,
-                                        Arrays.asList(expectedPointTotalVisits)),
-                        UsageReportMatcher
-                                .matchUsageReport(collectionNotVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                                        TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                                        this.getListOfVisitsPerMonthsPoints(0)),
-                        UsageReportMatcher.matchUsageReport(collectionNotVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
-                                TOP_CITIES_REPORT_ID, new ArrayList<>()),
-                        UsageReportMatcher.matchUsageReport(collectionNotVisited.getID() + "_" +
-                                                                TOP_COUNTRIES_REPORT_ID,
-                                TOP_COUNTRIES_REPORT_ID, new ArrayList<>()))));
+            .perform(get("/api/statistics/usagereports/search/object?uri=http://localhost:8080/server/api/core" +
+                         "/collections/" + collectionNotVisited.getID()))
+            // ** THEN **
+            .andExpect(status().isOk())
+            .andExpect(jsonPath("$._embedded.usagereports", not(empty())))
+            .andExpect(jsonPath("$._embedded.usagereports", Matchers.containsInAnyOrder(
+                UsageReportMatcher.matchUsageReport(
+                    collectionNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                    TOTAL_VISITS_REPORT_ID,
+                    List.of(
+                        getExpectedDsoViews(collectionNotVisited, 0)
+                    )
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    collectionNotVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                    TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                    this.getListOfVisitsPerMonthsPoints(0)
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    collectionNotVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
+                    TOP_CITIES_REPORT_ID,
+                    List.of()
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    collectionNotVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
+                    TOP_COUNTRIES_REPORT_ID,
+                    List.of()
+                )
+            )));
     }
 
     @Test
@@ -1558,8 +1667,8 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
 
         UsageReportPointCountryRest expectedPointCountry = new UsageReportPointCountryRest();
         expectedPointCountry.addValue("views", 1);
-        expectedPointCountry.setId("US");
-        expectedPointCountry.setLabel("United States");
+        expectedPointCountry.setIdAndLabel(Locale.US.getCountry(),
+                Locale.US.getDisplayCountry(context.getCurrentLocale()));
 
         //views and downloads
         List<UsageReportPointRest> totalDownloadsPoints = new ArrayList<>();
@@ -1581,20 +1690,38 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
             .andExpect(status().isOk())
             .andExpect(jsonPath("$._embedded.usagereports", not(empty())))
             .andExpect(jsonPath("$._embedded.usagereports", Matchers.containsInAnyOrder(
-                UsageReportMatcher
-                    .matchUsageReport(itemVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID, TOTAL_VISITS_REPORT_ID,
-                        Arrays.asList(expectedPointTotalVisits)),
-                UsageReportMatcher.matchUsageReport(itemVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                UsageReportMatcher.matchUsageReport(
+                    itemVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                    TOTAL_VISITS_REPORT_ID,
+                    List.of(
+                        getExpectedDsoViews(itemVisited, 1)
+                    )
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    itemVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
                     TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                    this.getListOfVisitsPerMonthsPoints(1)),
-                UsageReportMatcher.matchUsageReport(itemVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
-                    TOP_CITIES_REPORT_ID, Arrays.asList(expectedPointCity)),
-                UsageReportMatcher.matchUsageReport(itemVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
-                    TOP_COUNTRIES_REPORT_ID, Arrays.asList(expectedPointCountry)),
-                UsageReportMatcher.matchUsageReport(itemVisited.getID() + "_" + TOTAL_VISITS_TOTAL_DOWNLOADS,
-                    TOTAL_VISITS_TOTAL_DOWNLOADS, totalDownloadsPoints),
-                UsageReportMatcher.matchUsageReport(itemVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
-                    TOTAL_DOWNLOADS_REPORT_ID, new ArrayList<>()))));
+                    this.getListOfVisitsPerMonthsPoints(1)
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    itemVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
+                    TOP_CITIES_REPORT_ID,
+                    List.of(
+                        getExpectedCityViews("New York", 1)
+                    )
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    itemVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
+                    TOP_COUNTRIES_REPORT_ID,
+                    List.of(
+                        getExpectedCountryViews("US", "United States", 1)
+                    )
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    itemVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
+                    TOTAL_DOWNLOADS_REPORT_ID,
+                    List.of()
+                )
+            )));
     }
 
     @Test
@@ -1657,17 +1784,19 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
 
         UsageReportPointCountryRest expectedPointCountry = new UsageReportPointCountryRest();
         expectedPointCountry.addValue("views", 1);
-        expectedPointCountry.setId("US");
-        expectedPointCountry.setLabel("United States");
+        expectedPointCountry.setIdAndLabel(Locale.US.getCountry(),
+                Locale.US.getDisplayCountry(context.getCurrentLocale()));
 
         List<UsageReportPointRest> totalDownloadsPoints = new ArrayList<>();
         UsageReportPointDsoTotalVisitsRest expectedPointTotalVisitsBit1 = new UsageReportPointDsoTotalVisitsRest();
         expectedPointTotalVisitsBit1.addValue("views", 1);
-        expectedPointTotalVisitsBit1.setId("bitstream1");
+        expectedPointTotalVisitsBit1.setLabel("bitstream1");
+        expectedPointTotalVisitsBit1.setId(bitstream1.getID().toString());
         expectedPointTotalVisitsBit1.setType("bitstream");
         UsageReportPointDsoTotalVisitsRest expectedPointTotalVisitsBit2 = new UsageReportPointDsoTotalVisitsRest();
         expectedPointTotalVisitsBit2.addValue("views", 2);
-        expectedPointTotalVisitsBit2.setId("bitstream2");
+        expectedPointTotalVisitsBit2.setLabel("bitstream2");
+        expectedPointTotalVisitsBit2.setId(bitstream2.getID().toString());
         expectedPointTotalVisitsBit2.setType("bitstream");
         totalDownloadsPoints.add(expectedPointTotalVisitsBit1);
         totalDownloadsPoints.add(expectedPointTotalVisitsBit2);
@@ -1696,20 +1825,41 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
             .andExpect(status().isOk())
             .andExpect(jsonPath("$._embedded.usagereports", not(empty())))
             .andExpect(jsonPath("$._embedded.usagereports", Matchers.containsInAnyOrder(
-                UsageReportMatcher
-                    .matchUsageReport(itemVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID, TOTAL_VISITS_REPORT_ID,
-                        Arrays.asList(expectedPointTotalVisits)),
-                UsageReportMatcher.matchUsageReport(itemVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                UsageReportMatcher.matchUsageReport(
+                    itemVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                    TOTAL_VISITS_REPORT_ID,
+                    List.of(
+                        getExpectedDsoViews(itemVisited, 1)
+                    )
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    itemVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
                     TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                    this.getListOfVisitsPerMonthsPoints(1)),
-                UsageReportMatcher.matchUsageReport(itemVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
-                    TOP_CITIES_REPORT_ID, Arrays.asList(expectedPointCity)),
-                UsageReportMatcher.matchUsageReport(itemVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
-                    TOP_COUNTRIES_REPORT_ID, Arrays.asList(expectedPointCountry)),
-                UsageReportMatcher.matchUsageReport(itemVisited.getID() + "_" + TOTAL_VISITS_TOTAL_DOWNLOADS,
-                    TOTAL_VISITS_TOTAL_DOWNLOADS, usageReportPointRestsVisitsAndDownloads),
-                UsageReportMatcher.matchUsageReport(itemVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
-                    TOTAL_DOWNLOADS_REPORT_ID, totalDownloadsPoints))));
+                    getListOfVisitsPerMonthsPoints(1)
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    itemVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
+                    TOP_CITIES_REPORT_ID,
+                    List.of(
+                        getExpectedCityViews("New York", 1)
+                    )
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    itemVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
+                    TOP_COUNTRIES_REPORT_ID,
+                    List.of(
+                        getExpectedCountryViews("US", "United States", 1)
+                    )
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    itemVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
+                    TOTAL_DOWNLOADS_REPORT_ID,
+                    List.of(
+                        getExpectedDsoViews(bitstream1, 1),
+                        getExpectedDsoViews(bitstream2, 2)
+                    )
+                )
+            )));
     }
 
     @Test
@@ -1727,20 +1877,9 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 .contentType(contentType))
                 .andExpect(status().isCreated());
 
-        UsageReportPointDsoTotalVisitsRest expectedPointTotalVisits = new UsageReportPointDsoTotalVisitsRest();
-        expectedPointTotalVisits.addValue("views", 1);
-        expectedPointTotalVisits.setType("bitstream");
-        expectedPointTotalVisits.setLabel("BitstreamVisitedName");
-        expectedPointTotalVisits.setId(bitstreamVisited.getID().toString());
-
-        UsageReportPointCityRest expectedPointCity = new UsageReportPointCityRest();
-        expectedPointCity.addValue("views", 1);
-        expectedPointCity.setId("New York");
-
-        UsageReportPointCountryRest expectedPointCountry = new UsageReportPointCountryRest();
-        expectedPointCountry.addValue("views", 1);
-        expectedPointCountry.setId("US");
-        expectedPointCountry.setLabel("United States");
+        List<UsageReportPointRest> expectedTotalVisits = List.of(
+            getExpectedDsoViews(bitstreamVisited, 1)
+        );
 
         // And request the community usage reports
         getClient(adminToken)
@@ -1750,18 +1889,36 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
             .andExpect(status().isOk())
             .andExpect(jsonPath("$._embedded.usagereports", not(empty())))
             .andExpect(jsonPath("$._embedded.usagereports", Matchers.containsInAnyOrder(
-                UsageReportMatcher
-                    .matchUsageReport(bitstreamVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID, TOTAL_VISITS_REPORT_ID,
-                        Arrays.asList(expectedPointTotalVisits)),
-                UsageReportMatcher.matchUsageReport(bitstreamVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                UsageReportMatcher.matchUsageReport(
+                    bitstreamVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                    TOTAL_VISITS_REPORT_ID,
+                    expectedTotalVisits
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    bitstreamVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
                     TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                    this.getListOfVisitsPerMonthsPoints(1)),
-                UsageReportMatcher.matchUsageReport(bitstreamVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
-                    TOP_CITIES_REPORT_ID, Arrays.asList(expectedPointCity)),
-                UsageReportMatcher.matchUsageReport(bitstreamVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
-                    TOP_COUNTRIES_REPORT_ID, Arrays.asList(expectedPointCountry)),
-                UsageReportMatcher.matchUsageReport(bitstreamVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
-                    TOTAL_DOWNLOADS_REPORT_ID, Arrays.asList(expectedPointTotalVisits)))));
+                    this.getListOfVisitsPerMonthsPoints(1)
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    bitstreamVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
+                    TOP_CITIES_REPORT_ID,
+                    List.of(
+                        getExpectedCityViews("New York", 1)
+                    )
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    bitstreamVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
+                    TOP_COUNTRIES_REPORT_ID,
+                    List.of(
+                        getExpectedCountryViews("US", "United States", 1)
+                    )
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    bitstreamVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
+                    TOTAL_DOWNLOADS_REPORT_ID,
+                    expectedTotalVisits
+                )
+            )));
     }
 
     // Create expected points from -6 months to now, with given number of views in current month
@@ -1771,7 +1928,7 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
 
     private List<UsageReportPointRest> getListOfVisitsPerMonthsPoints(int viewsLastMonth, int nrOfMonthsBack) {
         List<UsageReportPointRest> expectedPoints = new ArrayList<>();
-        Calendar cal = Calendar.getInstance();
+        Calendar cal = Calendar.getInstance(context.getCurrentLocale());
         for (int i = 0; i <= nrOfMonthsBack; i++) {
             UsageReportPointDateRest expectedPoint = new UsageReportPointDateRest();
             if (i > 0) {
@@ -1779,7 +1936,7 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
             } else {
                 expectedPoint.addValue("views", viewsLastMonth);
             }
-            String month = cal.getDisplayName(Calendar.MONTH, Calendar.LONG, new Locale("en"));
+            String month = cal.getDisplayName(Calendar.MONTH, Calendar.LONG, context.getCurrentLocale());
             expectedPoint.setId(month + " " + cal.get(Calendar.YEAR));
 
             expectedPoints.add(expectedPoint);
@@ -1875,20 +2032,14 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 .content(mapper.writeValueAsBytes(viewEventRest))
                 .contentType(contentType))
                 .andExpect(status().isCreated());
+        getExpectedDsoViews(communityVisited, 1);
+        UsageReportPointDsoTotalVisitsRest expectedPointTotalVisits = getExpectedDsoViews(communityVisited, 1);
 
-        UsageReportPointDsoTotalVisitsRest expectedPointTotalVisits = new UsageReportPointDsoTotalVisitsRest();
-        expectedPointTotalVisits.addValue("views", 1);
-        expectedPointTotalVisits.setType("community");
-        expectedPointTotalVisits.setId(communityVisited.getID().toString());
+        UsageReportPointCityRest expectedPointCity = getExpectedCityViews("New York", 1);
 
-        UsageReportPointCityRest expectedPointCity = new UsageReportPointCityRest();
-        expectedPointCity.addValue("views", 1);
-        expectedPointCity.setId("New York");
+        UsageReportPointCountryRest expectedPointCountry = getExpectedCountryViews(Locale.US.getCountry(),
+                Locale.US.getDisplayCountry(context.getCurrentLocale()), 1);
 
-        UsageReportPointCountryRest expectedPointCountry = new UsageReportPointCountryRest();
-        expectedPointCountry.addValue("views", 1);
-        expectedPointCountry.setId("US");
-        expectedPointCountry.setLabel("United States");
         //add one day to the moment when we visit the community
         DateFormat dateFormat = new SimpleDateFormat("yyyy-MM-dd");
         Calendar cal = Calendar.getInstance();
@@ -1948,8 +2099,8 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
 
         UsageReportPointCountryRest expectedPointCountry = new UsageReportPointCountryRest();
         expectedPointCountry.addValue("views", 1);
-        expectedPointCountry.setId("US");
-        expectedPointCountry.setLabel("United States");
+        expectedPointCountry.setIdAndLabel(Locale.US.getCountry(),
+                Locale.US.getDisplayCountry(context.getCurrentLocale()));
 
         //downloads and views expected points
         List<UsageReportPointRest> totalDownloadsPoints = new ArrayList<>();
@@ -2064,7 +2215,7 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
         UsageReportPointDsoTotalVisitsRest totalVisitRelationProjects = new UsageReportPointDsoTotalVisitsRest();
         totalVisitRelationProjects.addValue("views", 0);
         totalVisitRelationProjects.setType("item");
-        totalVisitRelation.setLabel("Views");
+        totalVisitRelationProjects.setLabel("Views");
         totalVisitRelationProjects.setId(person.getID().toString());
 
         //create expected report points for city visits
@@ -2078,13 +2229,13 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
         //create expected report points for contry visits
         UsageReportPointCountryRest expectedPointCountry = new UsageReportPointCountryRest();
         expectedPointCountry.addValue("views", 1);
-        expectedPointCountry.setId("US");
-        expectedPointCountry.setLabel("United States");
+        expectedPointCountry.setIdAndLabel(Locale.US.getCountry(),
+                Locale.US.getDisplayCountry(context.getCurrentLocale()));
         //create expected report points for country visits with relation
         UsageReportPointCountryRest expectedPointCountryWithRelation = new UsageReportPointCountryRest();
         expectedPointCountryWithRelation.addValue("views", 3);
-        expectedPointCountryWithRelation.setId("US");
-        expectedPointCountryWithRelation.setLabel("United States");
+        expectedPointCountryWithRelation.setIdAndLabel(Locale.US.getCountry(),
+                Locale.US.getDisplayCountry(context.getCurrentLocale()));
         getClient(adminToken)
                 .perform(get("/api/statistics/usagereports/search/object?uri=http://localhost:8080/server/api/core" +
                         "/items/" + person.getID().toString()))
@@ -2216,40 +2367,31 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
         totalVisitRelation.setType("item");
         totalVisitRelation.setLabel("Views");
         totalVisitRelation.setId(orgUnit.getID().toString());
+
         //create expected report points for city visits with relation
-        UsageReportPointCityRest expectedPointCityWithRelation = new UsageReportPointCityRest();
-        expectedPointCityWithRelation.addValue("views", 3);
-        expectedPointCityWithRelation.setId("New York");
+        UsageReportPointCityRest expectedPointCityWithRelation = getExpectedCityViews("New York", 3);
+
         //create expected report points for country visits with relation
-        UsageReportPointCountryRest expectedPointCountryWithRelation = new UsageReportPointCountryRest();
-        expectedPointCountryWithRelation.addValue("views", 3);
-        expectedPointCountryWithRelation.setId("US");
-        expectedPointCountryWithRelation.setLabel("United States");
+        UsageReportPointCountryRest expectedPointCountryWithRelation = getExpectedCountryViews(Locale.US.getCountry(),
+                Locale.US.getDisplayCountry(context.getCurrentLocale()), 3);
+
         //top items expected report points
         List<UsageReportPointRest> points = new ArrayList<>();
         //first publication
-        UsageReportPointDsoTotalVisitsRest expectedPoint1 = new UsageReportPointDsoTotalVisitsRest();
-        expectedPoint1.addValue("views", 2);
-        expectedPoint1.setType("item");
-        expectedPoint1.setId(publicationVisited2.getID().toString());
+        UsageReportPointDsoTotalVisitsRest expectedPoint1 = getExpectedDsoViews(publicationVisited2, 2);
         points.add(expectedPoint1);
         //second publication
-        UsageReportPointDsoTotalVisitsRest expectedPoint2 = new UsageReportPointDsoTotalVisitsRest();
-        expectedPoint2.addValue("views", 1);
-        expectedPoint2.setType("item");
-        expectedPoint2.setId(publicationVisited1.getID().toString());
+        UsageReportPointDsoTotalVisitsRest expectedPoint2 = getExpectedDsoViews(publicationVisited1, 1);
         points.add(expectedPoint2);
 
         //total downloads expected points
         List<UsageReportPointRest> totalDownloadsPoints = new ArrayList<>();
-        UsageReportPointDsoTotalVisitsRest expectedPointTotalVisitsBit1 = new UsageReportPointDsoTotalVisitsRest();
-        expectedPointTotalVisitsBit1.addValue("views", 1);
-        expectedPointTotalVisitsBit1.setId("bitstream2");
-        expectedPointTotalVisitsBit1.setType("bitstream");
-        UsageReportPointDsoTotalVisitsRest expectedPointTotalVisitsBit2 = new UsageReportPointDsoTotalVisitsRest();
-        expectedPointTotalVisitsBit2.addValue("views", 1);
-        expectedPointTotalVisitsBit2.setId("bitstream1");
-        expectedPointTotalVisitsBit2.setType("bitstream");
+        UsageReportPointDsoTotalVisitsRest expectedPointTotalVisitsBit1 = getExpectedDsoViews(
+                bitstreampublication_first, 1);
+
+        UsageReportPointDsoTotalVisitsRest expectedPointTotalVisitsBit2 = getExpectedDsoViews(
+                bitstreampublication_second, 1);
+
         totalDownloadsPoints.add(expectedPointTotalVisitsBit1);
         totalDownloadsPoints.add(expectedPointTotalVisitsBit2);
 
@@ -2259,10 +2401,12 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
         UsageReportPointDsoTotalVisitsRest views = new UsageReportPointDsoTotalVisitsRest();
         views.addValue("views", 3);
         views.setType("item");
+        views.setLabel("Item visits");
         //downloads
         UsageReportPointDsoTotalVisitsRest downloads = new UsageReportPointDsoTotalVisitsRest();
         downloads.addValue("views", 2);
         downloads.setType("bitstream");
+        downloads.setLabel("File visits");
         totalDownloadsAndViewsPoints.add(views);
         totalDownloadsAndViewsPoints.add(downloads);
 
@@ -2301,5 +2445,34 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                                         TOTAL_VISITS_TOTAL_DOWNLOADS,
                                         totalDownloadsAndViewsPoints)
                 )));
+    }
+
+    private UsageReportPointDsoTotalVisitsRest getExpectedDsoViews(DSpaceObject dso, int views) {
+        UsageReportPointDsoTotalVisitsRest point = new UsageReportPointDsoTotalVisitsRest();
+
+        point.addValue("views", views);
+        point.setType(StringUtils.lowerCase(Constants.typeText[dso.getType()]));
+        point.setId(dso.getID().toString());
+        point.setLabel(dso.getName());
+
+        return point;
+    }
+
+    private UsageReportPointCountryRest getExpectedCountryViews(String id, String label, int views) {
+        UsageReportPointCountryRest point = new UsageReportPointCountryRest();
+
+        point.addValue("views", views);
+        point.setIdAndLabel(id, label);
+
+        return point;
+    }
+
+    private UsageReportPointCityRest getExpectedCityViews(String id, int views) {
+        UsageReportPointCityRest point = new UsageReportPointCityRest();
+
+        point.addValue("views", views);
+        point.setId(id);
+
+        return point;
     }
 }
